tests/snapshots/run_wpt_conformance__onnx_batchNormalization_default___sigmoid.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "subgraph.https.any.js",
    "batchNormalization default + sigmoid",
    "onnx",
    "PASS",
)
